# PremierLeague_TicketDemand_Predictor

./: .gitignore  README.md  exception.py  pyproject.toml
.VSCodeCounter/2025-03-12_15-32-29/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
notebooks/: .cache.sqlite  1-load_data.ipynb  2-read_raw_and_transform.ipynb  3-Model-building.ipynb  4-backfill_feature_group.ipynb  5-feature_pipeline.ipynb  6-training_pipeline.ipynb  7-inference_pipeline.ipynb  8-monitoring.ipynb  load_data.ipynb
src/: frontend.py  logger.py  monitoring_frontend.py  paths.py  plot.py
src/components/: backfill_feature.py  data_info.py  feature_group_config.py  feature_store_api.py  inference.py  model_info.py  monitoring.py
src/pipelines/: feature_pipeline.py  inference_pipeline.py  training_pipeline.py
