[project]
name = "premierleague-ticketdemand-predictor"
version = "0.1.0"
description = ""
authors = [
    {name = "SanjayDevarajan03",email = "sanjay.devarajan02@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "premierleague_ticketdemand_predictor", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.32.3"
pandas = "2.1.4"
plotly = "^5.24.1"
nbformat = ">=4.2.0"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
tqdm = "^4.67.1"
scikit-learn = "1.5.2"
pyarrow = "^19.0.0"
xgboost = "^1.7.6"
lightgbm = "^4.5.0"
optuna = "^4.2.0"
python-dotenv = "^1.0.1"
hopsworks = {extras = ["python"], version = "^4.1.5"}
comet-ml = "^3.48.1"
streamlit = "^1.41.1"
geopandas = "^1.0.1"
deck = "^3.0.0"
requests-cache = "^1.2.1"
jupyter = "^1.1.1"
nbconvert = "^7.16.6"
retry-requests = "^2.0.0"
openmeteo-requests = "^1.3.0"
python-dotenv = ""


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
nbconvert = "^7.16.6"
